--- a/tti2sdk/src/main/res/layout/activity_home.xml
+++ b/tti2sdk/src/main/res/layout/activity_home.xml
@@ -103,14 +103,16 @@
             android:id="@+id/containerMapConstraint"
             tools:visibility="visible">
 
-            <app.rive.runtime.kotlin.RiveAnimationView
+            <com.timwe.tti2sdk.ui.base.riveComponents.RiveButton
                 android:id="@+id/map"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:riveResource="@raw/map_main_prod_06"
+                app:riveFit="FILL"
                 tools:visibility="visible"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -134,10 +136,40 @@
         android:layout_margin="20dp"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/iconMissions"
+        app:layout_constraintTop_toBottomOf="@id/btnAvatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="informacoes"/>
+
+    <Button
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:id="@+id/btn1"
+        android:text="btn1"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/iconBoard"/>
+
+    <Button
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:id="@+id/btn2"
+        android:text="btn2"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@id/iconBoard"
+        app:layout_constraintStart_toEndOf="@id/btn1"
+        app:layout_constraintEnd_toStartOf="@id/btn3"/>
+
+    <Button
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:id="@+id/btn3"
+        android:text="btn3"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/iconBoard"/>
 
     <View
         android:id="@+id/bckIconMap"
