--- a/tti2sdk/src/main/res/layout/bottom_sheet_layout_end_mission.xml
+++ b/tti2sdk/src/main/res/layout/bottom_sheet_layout_end_mission.xml
@@ -36,176 +36,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/all_white"
-       android:paddingStart="15dp"
        android:paddingTop="20dp"
-       android:paddingEnd="15dp"
-       android:paddingBottom="20dp">
-
-      <View
-          android:id="@+id/booster_one_background"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"
-          android:background="@drawable/save_avatar_background_line_soft_gray"
-          app:layout_constraintBottom_toBottomOf="@+id/booster_one_mark_space"
-          app:layout_constraintTop_toTopOf="parent" />
-
-      <LinearLayout
-          android:id="@+id/booster_one_container_mark"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
-          android:orientation="horizontal"
-          android:weightSum="5"
-          app:layout_constraintBottom_toBottomOf="@+id/booster_one_text_mark"
-          app:layout_constraintEnd_toEndOf="@+id/booster_one_text_mark"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent">
-
-         <View
-             android:id="@+id/booster_one_view_mark_one"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginBottom="1dp"
-             android:layout_weight="2"
-             android:background="@drawable/end_save_avatar_one" />
-
-         <View
-             android:id="@+id/booster_one_view_mark_two"
-             android:layout_width="80dp"
-             android:layout_height="wrap_content"
-             android:layout_weight="3"
-             android:background="@drawable/end_save_avatar_two" />
-      </LinearLayout>
-
-      <TextView
-          android:id="@+id/booster_one_text_mark"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="20dp"
-          android:layout_marginTop="4dp"
-          android:fontFamily="@font/poppins_bold"
-          android:paddingEnd="40dp"
-          android:paddingBottom="0dp"
-          android:text="@string/adventure"
-          android:textAlignment="viewStart"
-          android:textColor="@color/all_white"
-          android:textSize="@dimen/fifteen_sp"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"/>
-
-      <TextView
-          android:id="@+id/booster_one_title_box"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="20dp"
-          android:layout_marginTop="5dp"
-          android:layout_marginEnd="20dp"
-          android:ellipsize="end"
-          android:fontFamily="@font/poppins_bold"
-          android:maxLines="2"
-          android:text="@string/end_mission_tile"
-          android:textAlignment="viewStart"
-          android:textColor="@color/gray_text"
-          android:textSize="@dimen/thirteen_sp"
-          app:layout_constraintStart_toEndOf="@+id/daily_four_sub_title_box2"
-          app:layout_constraintTop_toBottomOf="@+id/booster_one_container_mark" />
-
-
-      <ImageView
-          android:id="@+id/daily_four_icon_pre_text"
-          android:layout_width="45dp"
-          android:layout_height="0dp"
-          android:layout_marginStart="20dp"
-          android:layout_marginTop="15dp"
-          android:layout_marginBottom="15dp"
-          android:src="@drawable/circle_white"
-          app:layout_constraintBottom_toBottomOf="@+id/booster_one_background"
-          app:layout_constraintStart_toStartOf="@+id/booster_one_background"
-          app:layout_constraintTop_toBottomOf="@+id/booster_one_text_mark" />
-
-      <ImageView
-          android:id="@+id/boosterOneIconProsTextToSheet"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginEnd="25dp"
-          android:background="?attr/selectableItemBackgroundBorderless"
-          android:clickable="true"
-          android:focusable="true"
-          android:src="@drawable/icon_chevron_right"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
-
-      <TextView
-          android:id="@+id/text_elipsed"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
-          android:layout_marginStart="13dp"
-          android:layout_marginTop="2dp"
-          android:layout_marginEnd="13dp"
-          android:layout_marginBottom="17dp"
-          android:background="@drawable/circle_blue"
-          android:ellipsize="end"
-          android:fontFamily="@font/poppins_bold"
-          android:gravity="center"
-          android:maxLines="2"
-          android:text="5"
-          android:textAlignment="center"
-          android:textColor="@color/all_white"
-          android:textSize="@dimen/ten_sp"
-          app:layout_constraintBottom_toBottomOf="@+id/daily_four_icon_pre_text"
-          app:layout_constraintEnd_toEndOf="@+id/daily_four_icon_pre_text"
-          app:layout_constraintHorizontal_bias="0.0"
-          app:layout_constraintStart_toStartOf="@+id/daily_four_icon_pre_text"
-          app:layout_constraintTop_toTopOf="@+id/daily_four_icon_pre_text" />
-
-      <TextView
-          android:id="@+id/daily_four_sub_title_box2"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginBottom="2dp"
-          android:ellipsize="end"
-          android:fontFamily="@font/poppins_bold"
-          android:gravity="center"
-          android:text="POINT"
-          android:textAlignment="center"
-          android:textColor="@color/blue_dark"
-          android:textSize="@dimen/eight_sp"
-          app:layout_constraintBottom_toBottomOf="@+id/daily_four_icon_pre_text"
-          app:layout_constraintEnd_toEndOf="@+id/daily_four_icon_pre_text"
-          app:layout_constraintHorizontal_bias="0.0"
-          app:layout_constraintStart_toStartOf="@+id/daily_four_icon_pre_text"
-          tools:text="POINT" />
-
-      <TextView
-          android:id="@+id/booster_one_sub_title_box"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginEnd="20dp"
-          android:ellipsize="end"
-          android:fontFamily="@font/poppins_regular"
-          android:maxLines="2"
-          android:text="@string/end_mission_message"
-          android:textAlignment="viewStart"
-          android:textColor="@color/gray_text"
-          android:textSize="@dimen/ten_sp"
-          app:layout_constraintEnd_toStartOf="@+id/boosterOneIconProsTextToSheet"
-          app:layout_constraintStart_toStartOf="@+id/booster_one_title_box"
-          app:layout_constraintTop_toBottomOf="@+id/booster_one_title_box" />
-
-      <View
-          android:id="@+id/booster_one_mark_space"
-          android:layout_width="10dp"
-          android:layout_height="10dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/booster_one_sub_title_box" />
-
-   </androidx.constraintlayout.widget.ConstraintLayout>
-
-   <androidx.constraintlayout.widget.ConstraintLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:background="@color/all_white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="20dp" >
@@ -220,45 +51,78 @@
 
       <LinearLayout
           android:id="@+id/daily_two_container_mark"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
           android:orientation="horizontal"
-          android:weightSum="5"
-          app:layout_constraintBottom_toBottomOf="@+id/daily_two_text_mark"
-          app:layout_constraintEnd_toEndOf="@+id/daily_two_text_mark"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">
 
-         <View
+         <LinearLayout
              android:id="@+id/daily_two_view_mark_one"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:layout_marginBottom="1dp"
-             android:layout_weight="2"
-             android:background="@drawable/mark_booster_one_avatar" />
-         <View
+             android:background="@drawable/mark_booster_one_avatar_blue" >
+            <TextView
+                android:id="@+id/daily_two_text_mark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/adventure"
+                android:textAlignment="center"
+                android:textColor="@color/all_white"
+                android:textSize="@dimen/fourteen_sp" />
+         </LinearLayout>
+
+         <LinearLayout
              android:id="@+id/daily_two_view_mark_two"
-             android:layout_width="80dp"
+             android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:layout_weight="3"
-             android:background="@drawable/mark_daily_two" />
+             android:background="@drawable/mark_booster_one_avatar_green" >
+            <TextView
+                android:id="@+id/daily_two_text_two"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="@string/complete"
+                android:textAlignment="center"
+                android:textColor="@color/all_white"
+                android:textSize="@dimen/fifteen_sp" />
+         </LinearLayout>
+
+         <LinearLayout
+             android:id="@+id/daily_two_view_mark_tree"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:background="@drawable/mark_booster_one_avatar_green_light" >
+            <TextView
+                android:id="@+id/daily_two_text_tree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="@string/top_to_collect"
+                android:textAlignment="center"
+                android:textColor="@color/all_white"
+                android:textSize="@dimen/fifteen_sp" />
+         </LinearLayout>
+
       </LinearLayout>
 
-      <TextView
-          android:id="@+id/daily_two_text_mark"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="20dp"
-          android:layout_marginTop="4dp"
-          android:fontFamily="@font/poppins_bold"
-          android:paddingEnd="40dp"
-          android:paddingBottom="0dp"
-          android:text="@string/preparation"
-          android:textAlignment="center"
-          android:textColor="@color/all_white"
-          android:textSize="@dimen/fifteen_sp"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+
+
+
+
 
       <TextView
           android:id="@+id/daily_two_title_box"
@@ -270,7 +134,7 @@
           android:ellipsize="end"
           android:fontFamily="@font/poppins_bold"
           android:maxLines="2"
-          android:text="Create your Profile"
+          android:text="@string/create_your_profile"
           android:textAlignment="center"
           android:textColor="@color/gray_text"
           android:textSize="@dimen/thirteen_sp"
@@ -287,7 +151,7 @@
           android:fontFamily="@font/poppins_bold"
           android:gravity="center"
           android:maxLines="2"
-          android:text="5"
+          android:text="20"
           android:textAlignment="center"
           android:textColor="@color/blue_dark"
           android:textSize="@dimen/ten_sp"
@@ -323,7 +187,7 @@
           android:src="@drawable/icon_ellipse"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="@+id/daily_two_background"
-          app:layout_constraintTop_toBottomOf="@+id/daily_two_text_mark" />
+          app:layout_constraintTop_toBottomOf="@+id/daily_two_container_mark" />
 
       <ImageView
           android:id="@+id/daily_two_icon_pros_text"
@@ -343,7 +207,7 @@
           android:ellipsize="end"
           android:fontFamily="@font/poppins_regular"
           android:maxLines="2"
-          android:text="@string/moke_sure_vou_hove_vour_id_and_everything_you_need_on_your_travel"
+          android:text="@string/registration"
           android:textAlignment="center"
           android:textColor="@color/gray_text"
           android:textSize="@dimen/ten_sp"
