--- a/tti2sdk/src/main/res/layout/bottom_sheet_layout_first_mission.xml
+++ b/tti2sdk/src/main/res/layout/bottom_sheet_layout_first_mission.xml
@@ -59,19 +59,21 @@
           app:layout_constraintEnd_toEndOf="@+id/booster_one_text_mark"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">
+
          <View
              android:id="@+id/booster_one_view_mark_one"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="1dp"
              android:layout_weight="2"
-             android:background="@drawable/mark_booster_one_avatar" />
+             android:background="@drawable/dialog_first_mission_mark" />
+
          <View
              android:id="@+id/booster_one_view_mark_two"
              android:layout_width="80dp"
              android:layout_height="wrap_content"
              android:layout_weight="3"
-             android:background="@drawable/mark_booster_two_avatar" />
+             android:background="@drawable/dialog_first_mission_mark_dtl" />
       </LinearLayout>
 
       <TextView
@@ -86,7 +88,7 @@
           android:textAlignment="viewStart"
           android:textColor="@color/all_white"
           android:textSize="@dimen/fifteen_sp"
-          android:text="@string/preparation"
+          android:text="@string/adventure"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>
 
@@ -104,6 +106,7 @@
           android:textAlignment="viewStart"
           android:textColor="@color/gray_text"
           android:textSize="@dimen/thirteen_sp"
+          app:layout_constraintEnd_toEndOf="@+id/boosterOneIconProsTextToSheet"
           app:layout_constraintStart_toEndOf="@+id/daily_four_sub_title_box2"
           app:layout_constraintTop_toBottomOf="@+id/booster_one_container_mark" />
 
@@ -123,8 +126,7 @@
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/daily_four_icon_pre_text"
           app:layout_constraintTop_toTopOf="@+id/daily_four_icon_pre_text"
-          android:text="5"
-          tools:text="5" />
+          android:text="20" />
 
       <TextView
           android:id="@+id/daily_four_sub_title_box2"
@@ -170,15 +172,14 @@
           android:id="@+id/booster_one_sub_title_box"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:layout_marginEnd="20dp"
           android:ellipsize="end"
           android:fontFamily="@font/poppins_regular"
           android:maxLines="2"
-          android:text="@string/moke_sure_vou_hove_vour_id_and_everything_you_need_on_your_travel"
+          android:text="@string/registration"
           android:textAlignment="viewStart"
           android:textColor="@color/gray_text"
           android:textSize="@dimen/ten_sp"
-          app:layout_constraintEnd_toStartOf="@+id/boosterOneIconProsTextToSheet"
+          app:layout_constraintEnd_toEndOf="@+id/booster_one_title_box"
           app:layout_constraintStart_toStartOf="@+id/booster_one_title_box"
           app:layout_constraintTop_toBottomOf="@+id/booster_one_title_box" />
 
