--- a/tti2sdk/src/main/res/layout/fragment_head.xml
+++ b/tti2sdk/src/main/res/layout/fragment_head.xml
@@ -221,44 +221,13 @@
             app:layout_constraintTop_toBottomOf="@+id/textEyeBrows"
             tools:listitem="@layout/item_list_avatar" />
 
-
-        <LinearLayout
-            android:id="@+id/containerButtom"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/tti_toolbar_height"
-            android:background="@color/background_gray"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerViewEyebrows"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" >
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnSaveChanges"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/background_red_buttom_arrounded"
-                android:clickable="true"
-                android:focusable="true"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/save_changes"
-                android:textAllCaps="false"
-                android:textColor="@color/all_white"
-                android:textSize="@dimen/sixteen_sp"/>
-        </LinearLayout>
-
         <View
             android:layout_width="10dp"
             android:layout_height="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/containerButtom"/>
+            app:layout_constraintTop_toBottomOf="@+id/recyclerViewEyebrows"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
