Call list city and save in shared preference when start app

--- a/tti2sdk/src/main/res/layout/activity_splash.xml
+++ b/tti2sdk/src/main/res/layout/activity_splash.xml
@@ -54,14 +54,28 @@
         android:id="@+id/labelProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
+        android:text="Loading roads..."
         android:textColor="@color/blue_progress"
         android:textSize="@dimen/fourteen_sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progessLayout"
-        android:text="Loading roads..." />
+        app:layout_constraintTop_toBottomOf="@+id/progessLayout" />
+
+    <TextView
+        android:id="@+id/labelProgressCities"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="Loading cities..."
+        android:textColor="@color/blue_progress"
+        android:textSize="@dimen/fourteen_sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelProgress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
