--- a/tti2sdk/src/main/res/layout/activity_home.xml
+++ b/tti2sdk/src/main/res/layout/activity_home.xml
@@ -66,6 +66,7 @@
         android:background="#34000000"
         android:clickable="false"
         android:elevation="10dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,17 +104,6 @@
             android:background="#34000000"
             tools:visibility="visible">
 
-<!--            <ImageView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:id="@+id/mapView"-->
-<!--                android:src="@drawable/map_home"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"/>-->
-
-
             <app.rive.runtime.kotlin.RiveAnimationView
                 android:id="@+id/map"
                 android:layout_width="wrap_content"
@@ -139,48 +129,6 @@
         android:src="@drawable/icon_star"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerMainToolbar"/>
-
-    <TextView
-        android:id="@+id/txtInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnAvatar"
-        tools:text="informacoes"/>
-
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="40dp"
-        android:text="btn1"
-        app:layout_constraintBottom_toTopOf="@id/iconBoard"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginBottom="40dp"
-        android:text="btn2"
-        app:layout_constraintBottom_toTopOf="@id/iconBoard"
-        app:layout_constraintEnd_toStartOf="@id/btn3"
-        app:layout_constraintStart_toEndOf="@id/btn1"/>
-
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:text="btn3"
-        app:layout_constraintBottom_toTopOf="@id/iconBoard"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
         android:id="@+id/bckIconMap"
