--- a/tti2sdk/src/main/res/drawable/background_header.xml
+++ b/tti2sdk/src/main/res/drawable/background_header.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/thirty_white"/>
+    <solid android:color="@color/blue_card"/>
 
-    <stroke android:width="0dp" android:color="@color/thirty_white"/>
+    <stroke android:width="0dp" android:color="@color/blue_card"/>
 
     <corners
         android:topLeftRadius="0dp"
